# minecraft-asset-browser

./: README.md  main.py  pyproject.toml
minecraft_asset_browser/: __main__.py
templates/: assets_list.html  base.html  jar_index.html  version.html  versions.html
