[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "stimulatingfancydisplaymanager"
version = "0.1.0"
[tool.poetry.dependencies]
aiohttp = "^3.6"
jinja2 = "^2.11"
python = "^3.8"
pytz = "^2020.1"
[tool.poetry.dev-dependencies]
