[tool.poetry]
name = "minecraft-asset-browser"
version = "0.1.0"
description = ""
authors = ["mat <git@matdoes.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "minecraft_asset_browser"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
Jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
